Changed .gitignore to ignore extra files, edited Florida.tex to fix the Figure ?? error

--- a/week3/code/Florida.tex
+++ b/week3/code/Florida.tex
@@ -28,7 +28,7 @@ The mean temperature data for Florida across years shows a correlation coefficie
 \[
 r = 0.5331784
 \]
-This indicates that across 50{,}000 randomly shuffled samples of temperatures and years, none produced a correlation higher than the observed value. Figure~\ref{fig:hist} shows that the observed correlation lies well outside the random distribution.
+This indicates that across 50{,}000 randomly shuffled samples of temperatures and years, none produced a correlation higher than the observed value. Figure 1 shows that the observed correlation lies well outside the random distribution.
 
 \begin{figure}[h!]
 \centering
